--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A responsive photo gallery",
   "main": "main.js",
   "dependencies": {
+    "bulma": "^0.3.1",
     "install": "^0.8.2",
-    "jquery": "^1.11.1",
-    "npm": "^4.0.5"
+    "jquery": ">=3.0.0"
   },
   "devDependencies": {},
   "scripts": {
